--- a/_config.yml
+++ b/_config.yml
@@ -25,15 +25,15 @@ github_username: andrewsubie
 linkedin_username: andrew-subach
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: soobsterr
+youtube_username: @soobsterr
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
 additional_links:
-- title: itsgoingto.be
+- title: My Old Website
   icon: fas fa-globe
-  url: https://www.itsgoingto.be
+  url: https://www.asubach.w3.uvm.edu
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -46,11 +46,9 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/headshot.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  Hello, my name is Andrew and I'm a driven software engineer, tinkerer and lifelong learner. Recently, I graduated from UVM where my experiences spanned machine learning, software development and renewable energy systems. Proficient in Python, skilled in Git, CLI, containerized environments, SQL and data analysis. I excel at developing efficient, practical solutions to complex problems and collaborating to achieve project goals.
 
 content:
   - title: Projects # Title for the section
