youtube special char fix

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username: andrewsubie
 linkedin_username: andrew-subach
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: @soobsterr
+youtube_username: "@soobsterr"
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
