--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,9 @@ content:
       - Running
       - Backcountry Skiing
       - Reading
-      - Automotive Projects ![2004 Tacoma](/images/tanya.JPEG "2004 Tacoma")
+      - Automotive Projects 
+      
+      ![2004 Tacoma](/images/tanya.JPEG "2004 Tacoma")
 
       Look at this cool image  
       ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
