--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,7 @@ content:
       - Automotive Projects 
       
       ![2004 Tacoma](/images/tanya.JPEG "2004 Tacoma")
+      ![Skiing in Quebec](/images/skiing.PNG "Skiing in Quebec")
 
       Look at this cool image  
       ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
