added images for real this time

--- a/_config.yml
+++ b/_config.yml
@@ -120,9 +120,7 @@ content:
       
       ![2004 Tacoma](/images/tanya.JPEG "2004 Tacoma")
       ![Skiing in Quebec](/images/skiing.PNG "Skiing in Quebec")
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+      ![Sunset on Mt. Mansfield](/images/sunset.JPEG "Sunset on Mt. Mansfield")
 
 # Footer
 footer_show_references: true
